--- a/app/templates/feedlot/manifest/history.html
+++ b/app/templates/feedlot/manifest/history.html
@@ -43,7 +43,7 @@
                     {{ manifest.created_by or 'Unknown' }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">
-                    {{ manifest.created_at | strftime('%Y-%m-%d %H:%M') }}
+                    {{ manifest.created_at | strftime('%B %d, %Y at %I:%M %p') }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                     <div class="flex space-x-3">
